[package]
name = "ecm_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibig = { git = "https://github.com/tczajka/ibig-rs.git" }
rand = "0.8.5"
rayon = "1.5.3"

[profile.release]
opt-level = 3
overflow-checks = false
lto = true